--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-navigation-drawer": "^2.3.4",
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-promise": "^0.6.0",
