--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,9 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+
+MYAPP_RELEASE_STORE_FILE=tjs-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=tjs-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=123qwe!
+MYAPP_RELEASE_KEY_PASSWORD=123qwe!
